# qdrant_tutorial

./: SEMANTIC_JIRA_SEARCH_REPORT.md  all-MiniLM-L12-v2___summary.md  all-MiniLM-L6-v2___summary.md  all-mpnet-base-v2___summary.md  all-mpnet-base-v2___summary_60.md  day1.md  hnsw_performance_tuning.py  main.py  pyproject.toml  semantic_jira_search.py  semantic_movie_search.py  vegs.json
