[project]
name = "qdrant-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "huggingface>=0.0.1",
    "llama-index>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "transformers>=5.8.0",
]
